# GameOfLife

./: CMakeLists.txt  LICENSE  game.cpp  game.h  main.cpp  rule.cpp  rule.h  window.cpp  window.h
